# realtime-deformations

./: .gitignore  CMakeLists.txt  README.md
realtime-deformations/: CMakeLists.txt  camera.cpp  camera.hpp  constants.hpp  cudaCalc.cu  cudaCalc.cuh  fps_counter.hpp  logger.hpp  main.cpp  material_point_method.cpp  material_point_method.hpp  mathy.cpp  mathy.hpp  mesh.cpp  mesh.hpp  user_controls.cpp  user_controls.hpp  utils.h
realtime-deformations/common/: objloader.cpp  shader.cpp  text2D.cpp  texture.cpp
realtime-deformations/shaders/: Object.fragmentshader  Object.vertexshader  Particle.vertexshader  fragment.frag  vertex.vert
